--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  system_id: 1
-  object_type: MyString
+  category_id: 1
   object_id: 1
+  object_type: MyString
 
 two:
-  system_id: 1
-  object_type: MyString
+  category_id: 1
   object_id: 1
+  object_type: MyString
